AC_INIT(src/linbox.dxx)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(linbox, 0.0.1)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

AC_PROG_CXX
AC_STDC_HEADERS
AC_PROG_RANLIB

# Feature checks

LB_CHECK_NTL
LB_CHECK_GIVARO
LB_CHECK_GMP
LB_CHECK_SACLIB
LB_CHECK_LIDIA
LB_CHECK_ALP

AC_OUTPUT([
Makefile
src/Makefile
src/library/Makefile
src/library/algorithms/Makefile
src/library/algorithms/BlackBox/Makefile
src/library/algorithms/Field/Makefile
src/library/algorithms/Gauss/Makefile
src/library/algorithms/Sequence/Makefile
src/library/algorithms/Sequence/Iterators/Makefile
src/library/algorithms/Sequence/Lanczos/Makefile
src/library/algorithms/Sequence/Massey/Makefile
src/library/archetypes/Makefile
src/library/archetypes/blackbox/Makefile
src/library/archetypes/element/Makefile
src/library/archetypes/field/Makefile
src/library/archetypes/iterator/Makefile
src/library/archetypes/localring/Makefile
src/library/archetypes/random/Makefile
src/library/archetypes/vector/Makefile
src/library/objects/Makefile
src/library/objects/BlackBox/Makefile
src/library/objects/Integers/Makefile
src/library/objects/Random/Makefile
src/library/objects/auxillary/Makefile
src/library/objects/blackbox/Makefile
src/library/objects/element/Makefile
src/library/objects/element/abstract/Makefile
src/library/objects/field/Makefile
src/library/objects/field/abstract/Makefile
src/library/objects/field/parametric/Makefile
src/library/objects/field/unparametric/Makefile
src/library/objects/iterator/Makefile
src/library/objects/random/Makefile
src/library/objects/random/abstract/Makefile
src/library/objects/random/parametric/Makefile
src/library/objects/random/unparametric/Makefile
src/library/objects/vector/Makefile
src/library/solutions/Makefile
src/tools/Makefile
src/tools/Commentator/Makefile
src/tools/Timer/Makefile
src/tools/GMP++/Makefile
src/tools/Maths/Makefile
src/tools/NormalForm/Makefile
src/tools/Reordering/Makefile
src/tools/Error/Makefile
src/tools/SparseVector/Makefile
src/wrappers/Makefile
src/wrappers/by_library/Makefile
src/wrappers/by_library/Givaro/Makefile
src/wrappers/by_library/Givaro/Field/Makefile
src/wrappers/by_library/Givaro/Ring/Makefile
src/wrappers/by_library/Givaro/Ring/Polynomial/Makefile
src/wrappers/by_library/PRNG/Makefile
src/wrappers/by_library/PRNG/Random/Makefile
src/wrappers/by_library/Alp/Makefile
src/wrappers/by_library/Lidia/Makefile
src/wrappers/by_library/NTL/Makefile
src/wrappers/by_scope/Makefile
src/wrappers/by_scope/field/Makefile
src/wrappers/by_scope/random/Makefile
tests/Makefile
tests/Algorithms/Makefile
tests/BlackBox/Makefile
tests/Vector/Makefile
tests/Field/Makefile
tests/Gauss/Makefile
tests/Random/Makefile
tests/integertest/Makefile
macros/Makefile
examples/Makefile
examples/beginners/Makefile
examples/beginners/fields/Makefile
examples/beginners/integers/Makefile
])
